--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                                 </div>
                             </div>
                             <hr>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <p class="card-text">Some quick example textt to build on the card title and make up the bulk of the card's content.</p>
                             <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
